--- a/=====项目=====/src/assets/css/index.scss
+++ b/=====项目=====/src/assets/css/index.scss
@@ -352,7 +352,31 @@ template {
   display: none;
 }
 
-#root{
-  min-width:1200px;
+/*---滚动条默认显示样式--*/
+::-webkit-scrollbar-thumb {
+  background-color: #ababab;
+  height: 80px;
+  outline-offset: -2px;
+  outline: 2px solid #fff;
+  -webkit-border-radius: 5px;
+  border: 2px solid #fff;
 }
-/* ======================================================base=============================================================== */
+
+/*---鼠标点击滚动条显示样式--*/
+::-webkit-scrollbar-thumb:hover {
+  background-color: #7d7d7d;
+  height: 80px;
+  -webkit-border-radius: 5px;
+}
+
+/*---滚动条大小--*/
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+/*---滚动框背景样式--*/
+::-webkit-scrollbar-track-piece {
+  background-color: #fff;
+  -webkit-border-radius: 0;
+}
