--- a/源码/src/features/article/article.scss
+++ b/源码/src/features/article/article.scss
@@ -18,6 +18,10 @@
 }
 
 .main-article {
+  display: flex;
+  flex-direction: column;
+  height:100%;
+
   .article-summary {
     width: 100%;
     height: 250px;
@@ -53,7 +57,6 @@
   .article-layout {
     padding: 24px 20px;
     background: #fff;
-    min-height: calc(100vh - 65px - 65px);
 
     .article-content {
       background: #fff;
