--- a/源码/src/features/mindmap/mindmap.scss
+++ b/源码/src/features/mindmap/mindmap.scss
@@ -1,4 +1,8 @@
 .main-mindmap {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+
   .mindmap-summary {
     width: 100%;
     height: 250px;
@@ -11,7 +15,6 @@
     margin-top: 10px;
     padding: 20px 20px;
     background: #fff;
-    min-height: calc(100vh - 65px - 65px);
 
     .mindmap-content {
       background: #fff;
